--- a/CA1_ORM_REST_JS/pom.xml
+++ b/CA1_ORM_REST_JS/pom.xml
@@ -55,11 +55,12 @@
             <version>2.23.2</version>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
